# skill-guard

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYPI_SETUP.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yaml  skill-gate-monitor.yml  skill-guard-pr-gate.yml
docs/: automation-policy.md  ci-integration.md  configuration-reference.md  eval-authoring-guide.md  getting-started.md  hooks-guide.md  integration-guide.md  release-gate.md
examples/: README.md
examples/basic-quickstart/: README.md
examples/skill-creator/: SKILL.md
examples/validate-anthropic-skills/: README.md  run.sh
notes/: issue-107-plan.md
scripts/: smoke-embeddings-docker.sh  smoke.sh
skill_gate/: config.py  main.py  models.py  parser.py
skill_gate/commands/: catalog.py  check.py  conflict.py  init.py  monitor.py  secure.py  test.py  validate.py
skill_gate/engine/: agent_runner.py  catalog_manager.py  lifecycle.py  notifier.py  quality.py  security.py  similarity.py
skill_gate/output/: html.py  json_out.py  markdown.py  text.py
skill_guard/: config.py  main.py  models.py  parser.py
skill_guard/commands/: catalog.py  check.py  conflict.py  fix.py  init.py  monitor.py  pre_commit.py  secure.py  suppress.py  test.py  validate.py
skill_guard/engine/: agent_runner.py  catalog_manager.py  fixer.py  injection_patterns.py  lifecycle.py  notifier.py  quality.py  repo_targets.py  security.py  similarity.py  spec_validator.py  test_injection.py
skill_guard/output/: html.py  json_out.py  markdown.py  semantics.py  text.py  workspace.py
skill_guard/templates/base/: SKILL.md.tmpl
skill_guard/templates/base/evals/: config.yaml.tmpl  evals.json.tmpl
skill_guard/templates/search-tool/: SKILL.md.tmpl
skill_guard/templates/search-tool/evals/: config.yaml.tmpl  evals.json.tmpl
skill_guard/templates/weather-tool/: SKILL.md.tmpl
skill_guard/templates/weather-tool/evals/: config.yaml.tmpl  evals.json.tmpl
tests/fixtures/skills/anthropic-compliant/: SKILL.md
tests/fixtures/skills/anthropic-noncompliant-valid-evals/: SKILL.md
tests/fixtures/skills/anthropic-noncompliant-valid-evals/evals/: evals.json
tests/fixtures/skills/anthropic-noncompliant/evals/: evals.json
tests/fixtures/skills/broken-refs-skill/: SKILL.md
tests/fixtures/skills/conflicting-skill/: SKILL.md
tests/fixtures/skills/evals-json-only/: SKILL.md
tests/fixtures/skills/evals-json-only/evals/: evals.json
tests/fixtures/skills/fixable-skill/: SKILL.md
tests/fixtures/skills/fixable-skill/references/: runbook.md
tests/fixtures/skills/ignore-conflict-skill/: SKILL.md
tests/fixtures/skills/injection-skill/: SKILL.md
tests/fixtures/skills/injection-skill/references/: guide.md
tests/fixtures/skills/invalid-skill/: SKILL.md
tests/fixtures/skills/malicious-skill/: SKILL.md
tests/fixtures/skills/malicious-skill/scripts/: setup.sh
tests/fixtures/skills/valid-skill/: SKILL.md
tests/fixtures/skills/valid-skill/evals/: config.yaml  evals.json
tests/fixtures/skills/valid-skill/evals/prompts/: basic.md  edge-case.md  not-my-job.md
tests/fixtures/skills/valid-skill/references/: runbook.md
tests/fixtures/skills/valid-skill/scripts/: check.sh
tests/integration/: conftest.py  test_agent_runner_integration.py  test_check_changed.py  test_pre_commit.py
tests/unit/: test_agent_runner.py  test_catalog.py  test_check_cmd.py  test_cli.py  test_config.py  test_fix_cmd.py  test_init_cmd.py  test_injection_patterns.py  test_lifecycle.py  test_models.py  test_monitor_cmd.py  test_notifier.py  test_output.py  test_output_text.py  test_parser.py  test_pre_commit_cmd.py  test_quality.py  test_repo_targets.py  test_security.py  test_similarity.py  test_spec_validator.py  test_suppress_cmd.py  test_test_cmd.py  test_test_injection.py  test_workspace_output.py
